--- a/mapa.ipynb
+++ b/mapa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_7dcb09ae63a3c0d49417230f68b1d5f6 {\n",
+       "                #map_49f75bcfd0f57a2b88665ea1580a7bb6 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -56,14 +56,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_7dcb09ae63a3c0d49417230f68b1d5f6&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_49f75bcfd0f57a2b88665ea1580a7bb6&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_7dcb09ae63a3c0d49417230f68b1d5f6 = L.map(\n",
-       "                &quot;map_7dcb09ae63a3c0d49417230f68b1d5f6&quot;,\n",
+       "            var map_49f75bcfd0f57a2b88665ea1580a7bb6 = L.map(\n",
+       "                &quot;map_49f75bcfd0f57a2b88665ea1580a7bb6&quot;,\n",
        "                {\n",
        "                    center: [40.7128, -74.006],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -77,37 +77,37 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_2142b796f285ed3f567ef8eb8c55f648 = L.tileLayer(\n",
+       "            var tile_layer_e4b9e7030b12e3f37b65806c2a22fe83 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_2142b796f285ed3f567ef8eb8c55f648.addTo(map_7dcb09ae63a3c0d49417230f68b1d5f6);\n",
+       "            tile_layer_e4b9e7030b12e3f37b65806c2a22fe83.addTo(map_49f75bcfd0f57a2b88665ea1580a7bb6);\n",
        "        \n",
        "    \n",
-       "            var marker_a3a0286a07228e983ee0375fc31227a7 = L.marker(\n",
+       "            var marker_3f329617c8986d68f8a6104568b275e5 = L.marker(\n",
        "                [40.7128, -74.006],\n",
        "                {}\n",
-       "            ).addTo(map_7dcb09ae63a3c0d49417230f68b1d5f6);\n",
+       "            ).addTo(map_49f75bcfd0f57a2b88665ea1580a7bb6);\n",
        "        \n",
        "    \n",
-       "            var icon_9ff619e17c135c242354bda1c0c5528c = L.AwesomeMarkers.icon(\n",
+       "            var icon_a323d74b16d2376248ae8005e6b4772c = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;info-sign&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_a3a0286a07228e983ee0375fc31227a7.setIcon(icon_9ff619e17c135c242354bda1c0c5528c);\n",
+       "            marker_3f329617c8986d68f8a6104568b275e5.setIcon(icon_a323d74b16d2376248ae8005e6b4772c);\n",
        "        \n",
        "    \n",
-       "        var popup_1388e92755ff6e5750ce41771f0746ea = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_edc0ed78095bffc57f76985b39607551 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_1262a45a02d9ba564d3c24d566119ab1 = $(`&lt;div id=&quot;html_1262a45a02d9ba564d3c24d566119ab1&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;New York&lt;/div&gt;`)[0];\n",
-       "                popup_1388e92755ff6e5750ce41771f0746ea.setContent(html_1262a45a02d9ba564d3c24d566119ab1);\n",
+       "                var html_cb9e6f851efceaa5aa5db693b045b9fd = $(`&lt;div id=&quot;html_cb9e6f851efceaa5aa5db693b045b9fd&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;New York&lt;/div&gt;`)[0];\n",
+       "                popup_edc0ed78095bffc57f76985b39607551.setContent(html_cb9e6f851efceaa5aa5db693b045b9fd);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_a3a0286a07228e983ee0375fc31227a7.bindPopup(popup_1388e92755ff6e5750ce41771f0746ea)\n",
+       "        marker_3f329617c8986d68f8a6104568b275e5.bindPopup(popup_edc0ed78095bffc57f76985b39607551)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -116,7 +116,7 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x232795bbfe0>"
+       "<folium.folium.Map at 0x1d0f8976870>"
       ]
      },
      "metadata": {},
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_6336b5012b8d3d9e4e86fd1019ea090b {\n",
+       "                #map_e8a0f2d16336ef17a41c39273a7cec07 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -195,14 +195,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_6336b5012b8d3d9e4e86fd1019ea090b&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_e8a0f2d16336ef17a41c39273a7cec07&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_6336b5012b8d3d9e4e86fd1019ea090b = L.map(\n",
-       "                &quot;map_6336b5012b8d3d9e4e86fd1019ea090b&quot;,\n",
+       "            var map_e8a0f2d16336ef17a41c39273a7cec07 = L.map(\n",
+       "                &quot;map_e8a0f2d16336ef17a41c39273a7cec07&quot;,\n",
        "                {\n",
        "                    center: [-21.1775, -47.8103],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -216,37 +216,37 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_6317df000e6a2bc1d2a2f32ba356a113 = L.tileLayer(\n",
+       "            var tile_layer_f85a10606b041838db1e7eb9beb6f5c9 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_6317df000e6a2bc1d2a2f32ba356a113.addTo(map_6336b5012b8d3d9e4e86fd1019ea090b);\n",
+       "            tile_layer_f85a10606b041838db1e7eb9beb6f5c9.addTo(map_e8a0f2d16336ef17a41c39273a7cec07);\n",
        "        \n",
        "    \n",
-       "            var marker_a1fa5ae74ddf5a602919a1cf7b0cc1b0 = L.marker(\n",
+       "            var marker_7fbb7640d12732daf05f8812549e78ac = L.marker(\n",
        "                [-21.1775, -47.8103],\n",
        "                {}\n",
-       "            ).addTo(map_6336b5012b8d3d9e4e86fd1019ea090b);\n",
+       "            ).addTo(map_e8a0f2d16336ef17a41c39273a7cec07);\n",
        "        \n",
        "    \n",
-       "            var icon_4a4106a5cdf4355a0c02d2f4f972399a = L.AwesomeMarkers.icon(\n",
+       "            var icon_e4e40f0f50b04278b3720293698ea0c4 = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;info-sign&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;green&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_a1fa5ae74ddf5a602919a1cf7b0cc1b0.setIcon(icon_4a4106a5cdf4355a0c02d2f4f972399a);\n",
+       "            marker_7fbb7640d12732daf05f8812549e78ac.setIcon(icon_e4e40f0f50b04278b3720293698ea0c4);\n",
        "        \n",
        "    \n",
-       "        var popup_e78fe5c3db7e684ba1935d23c0278cf1 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_3f12807c630343ed85312dc9f0a1c7e1 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_ec6ff559344fd9188c83df34d197c312 = $(`&lt;div id=&quot;html_ec6ff559344fd9188c83df34d197c312&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Você está aqui!&lt;/div&gt;`)[0];\n",
-       "                popup_e78fe5c3db7e684ba1935d23c0278cf1.setContent(html_ec6ff559344fd9188c83df34d197c312);\n",
+       "                var html_dd8ed733fed1ed79bb10d8a3a4db1626 = $(`&lt;div id=&quot;html_dd8ed733fed1ed79bb10d8a3a4db1626&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Você está aqui!&lt;/div&gt;`)[0];\n",
+       "                popup_3f12807c630343ed85312dc9f0a1c7e1.setContent(html_dd8ed733fed1ed79bb10d8a3a4db1626);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_a1fa5ae74ddf5a602919a1cf7b0cc1b0.bindPopup(popup_e78fe5c3db7e684ba1935d23c0278cf1)\n",
+       "        marker_7fbb7640d12732daf05f8812549e78ac.bindPopup(popup_3f12807c630343ed85312dc9f0a1c7e1)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -255,7 +255,7 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x232799dd6a0>"
+       "<folium.folium.Map at 0x1d0f7867a70>"
       ]
      },
      "metadata": {},
@@ -285,6 +285,171 @@
     "# Exibindo o mapa\n",
     "display(mymap)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TRACEJADO - RANDON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapa criado! Abra o arquivo 'random_points_map.html' no navegador para visualizar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import folium\n",
+    "import random\n",
+    "\n",
+    "# Ponto inicial para o mapa (latitude e longitude base)\n",
+    "latitude = -23.55052  # Latitude inicial (São Paulo, como exemplo)\n",
+    "longitude = -46.633308  # Longitude inicial\n",
+    "\n",
+    "# Criação do mapa centrado no ponto inicial\n",
+    "map_center = [latitude, longitude]\n",
+    "mymap = folium.Map(location=map_center, zoom_start=15)\n",
+    "\n",
+    "# Lista para armazenar os pontos visitados\n",
+    "points = [[latitude, longitude]]\n",
+    "\n",
+    "# Gerar 10 pontos aleatórios ao redor da posição inicial\n",
+    "for _ in range(10):\n",
+    "    # Gerar deslocamentos pequenos em latitude e longitude\n",
+    "    lat_offset = random.uniform(-0.01, 0.01)\n",
+    "    lon_offset = random.uniform(-0.01, 0.01)\n",
+    "    \n",
+    "    # Atualizar latitude e longitude\n",
+    "    latitude += lat_offset\n",
+    "    longitude += lon_offset\n",
+    "    \n",
+    "    # Adicionar o novo ponto à lista\n",
+    "    points.append([latitude, longitude])\n",
+    "    \n",
+    "    # Adicionar um marcador no novo ponto\n",
+    "    folium.Marker(\n",
+    "        [latitude, longitude],\n",
+    "        popup=f\"Localização: ({latitude:.5f}, {longitude:.5f})\",\n",
+    "        icon=folium.Icon(color=\"blue\", icon=\"info-sign\")\n",
+    "    ).add_to(mymap)\n",
+    "\n",
+    "# Adicionar uma linha conectando os pontos\n",
+    "folium.PolyLine(points, color=\"red\", weight=2.5, opacity=1).add_to(mymap)\n",
+    "\n",
+    "# Salvar o mapa em um arquivo HTML\n",
+    "mymap.save(\"random_points_map.html\")\n",
+    "print(\"Mapa criado! Abra o arquivo 'random_points_map.html' no navegador para visualizar.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TRACEJADO - RANDON em REAL-TIME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapa salvo!\n",
+      "Mapa salvo!\n",
+      "Ponto 1 adicionado: (-23.55216, -46.62812)\n",
+      "Mapa salvo!\n",
+      "Ponto 2 adicionado: (-23.54914, -46.63483)\n",
+      "Mapa salvo!\n",
+      "Ponto 3 adicionado: (-23.55012, -46.63457)\n",
+      "Mapa salvo!\n",
+      "Ponto 4 adicionado: (-23.55877, -46.62541)\n",
+      "Mapa salvo!\n",
+      "Ponto 5 adicionado: (-23.56016, -46.61744)\n",
+      "Mapa salvo!\n",
+      "Ponto 6 adicionado: (-23.56983, -46.62581)\n",
+      "Mapa salvo!\n",
+      "Ponto 7 adicionado: (-23.57645, -46.61932)\n",
+      "Mapa salvo!\n",
+      "Ponto 8 adicionado: (-23.57226, -46.62211)\n",
+      "Mapa salvo!\n",
+      "Ponto 9 adicionado: (-23.56425, -46.62329)\n",
+      "Mapa salvo!\n",
+      "Ponto 10 adicionado: (-23.56362, -46.63083)\n",
+      "Rastreamento finalizado! Abra o arquivo 'real_time_map.html' no navegador para visualizar o trajeto.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import folium\n",
+    "import random\n",
+    "import time\n",
+    "\n",
+    "# Ponto inicial para o mapa (latitude e longitude base)\n",
+    "latitude = -23.55052  # Latitude inicial (São Paulo, como exemplo)\n",
+    "longitude = -46.633308  # Longitude inicial\n",
+    "\n",
+    "# Criação do mapa centrado no ponto inicial\n",
+    "map_center = [latitude, longitude]\n",
+    "mymap = folium.Map(location=map_center, zoom_start=15)\n",
+    "\n",
+    "# Lista para armazenar os pontos visitados\n",
+    "points = [[latitude, longitude]]\n",
+    "\n",
+    "# Função para salvar o mapa atualizado\n",
+    "def save_map():\n",
+    "    mymap.save(\"real_time_map.html\")\n",
+    "    print(\"Mapa salvo!\")\n",
+    "\n",
+    "# Inicializa o mapa com o ponto inicial\n",
+    "folium.Marker([latitude, longitude], popup=\"Localização Inicial\", icon=folium.Icon(color=\"blue\", icon=\"info-sign\")).add_to(mymap)\n",
+    "save_map()  # Salva o mapa inicial\n",
+    "\n",
+    "# Gerar 10 pontos aleatórios ao redor da posição inicial\n",
+    "for i in range(10):\n",
+    "    # Gerar deslocamentos pequenos em latitude e longitude\n",
+    "    lat_offset = random.uniform(-0.01, 0.01)\n",
+    "    lon_offset = random.uniform(-0.01, 0.01)\n",
+    "    \n",
+    "    # Atualizar latitude e longitude\n",
+    "    latitude += lat_offset\n",
+    "    longitude += lon_offset\n",
+    "    \n",
+    "    # Adicionar o novo ponto à lista de pontos\n",
+    "    points.append([latitude, longitude])\n",
+    "    \n",
+    "    # Adicionar um novo marcador no novo ponto\n",
+    "    folium.Marker(\n",
+    "        [latitude, longitude],\n",
+    "        popup=f\"Localização: ({latitude:.5f}, {longitude:.5f})\",\n",
+    "        icon=folium.Icon(color=\"blue\", icon=\"info-sign\")\n",
+    "    ).add_to(mymap)\n",
+    "\n",
+    "    # Adicionar uma linha conectando os pontos até o momento\n",
+    "    folium.PolyLine(points, color=\"red\", weight=2.5, opacity=1).add_to(mymap)\n",
+    "\n",
+    "    # Salvar o mapa atualizado\n",
+    "    save_map()\n",
+    "\n",
+    "    # Imprimir progresso no console\n",
+    "    print(f\"Ponto {i + 1} adicionado: ({latitude:.5f}, {longitude:.5f})\")\n",
+    "\n",
+    "    # Esperar 3 segundos antes de gerar o próximo ponto\n",
+    "    time.sleep(3)\n",
+    "\n",
+    "# Mensagem final\n",
+    "print(\"Rastreamento finalizado! Abra o arquivo 'real_time_map.html' no navegador para visualizar o trajeto.\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -309,4 +474,3 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
-
